--- a/next-playground-app/package.json
+++ b/next-playground-app/package.json
@@ -15,6 +15,7 @@
     "react-dom": "^18.2.0",
     "react-toastify": "^10.0.5",
     "styled-components": "^6.1.11",
+    "styled-jsx": "^5.1.6",
     "styled-reset": "^4.5.2",
     "swr": "^2.2.5"
   },
