--- a/next-playground-app/package.json
+++ b/next-playground-app/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "build:css": "tailwindcss -i ./src/styles/globalTail.css -o ./src/styles/output.css"
   },
   "dependencies": {
     "@tanstack/react-query": "^5.48.0",
@@ -25,10 +26,16 @@
     "@types/react-dom": "^18",
     "@typescript-eslint/eslint-plugin": "^6.18.1",
     "@typescript-eslint/parser": "^6.18.1",
+    "autoprefixer": "^10.4.19",
+    "css-loader": "^7.1.2",
     "eslint": "^8",
     "eslint-config-next": "14.0.4",
     "eslint-config-prettier": "^9.1.0",
+    "postcss": "^8.4.39",
+    "postcss-loader": "^8.1.1",
     "prettier": "^3.1.1",
+    "style-loader": "^4.0.0",
+    "tailwindcss": "^3.4.4",
     "typescript": "^5"
   }
 }
